# scales-rs

./: .tmuxp.yaml  Cargo.toml  README.md  notes.org
.github/workflows/: test.yaml
src/: bin.rs  consts.rs  lib.rs  main.rs  scales.rs
