[package]
name = "scales"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
lazy_static = {version = "1.4.0"}
clap = {version = "~3.0", features = ["derive"]}

[lib]
name = "scales"
path = "src/lib.rs"

[[bin]]
name = "scales-cli"
path = "src/bin.rs"