[package]
edition = "2021"
name = "scales"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scales"
path = "src/lib.rs"

[[bin]]
name = "scales-cli"
path = "src/bin.rs"
[features]
coverage = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
# lazy_static = {version = "1.4.0"}
clap = {version = "~3.0", features = ["derive"]}
